--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <title>Rock Climbing</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
